tests/rosetta/transpiler/C/bitmap-ppm-conversion-through-a-pipe.error
compile failed: exit status 1: /tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c: In function ‘_mem’:
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:58:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   58 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c: At top level:
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:68:10: error: expected identifier or ‘(’ before ‘[’ token
   68 |     Pixel[] *px;
      |          ^
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c: In function ‘NewBitmap’:
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:109:49: warning: passing argument 1 of ‘list_append_int_new’ from incompatible pointer type [-Wincompatible-pointer-types]
  109 |                         r = list_append_int_new(r, r_len, (Pixel){.R = 0LL, .G = 0LL, .B = 0LL});
      |                                                 ^
      |                                                 |
      |                                                 Pixel *
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:8:44: note: expected ‘const int *’ but argument is of type ‘Pixel *’
    8 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                 ~~~~~~~~~~~^~~
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:109:66: error: incompatible type for argument 3 of ‘list_append_int_new’
  109 |                         r = list_append_int_new(r, r_len, (Pixel){.R = 0LL, .G = 0LL, .B = 0LL});
      |                                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                  |
      |                                                                  Pixel
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:8:65: note: expected ‘int’ but argument is of type ‘Pixel’
    8 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                                             ~~~~^~~
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:112:35: warning: passing argument 1 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  112 |         data = list_append_strptr(data, &data_len, r);
      |                                   ^~~~
      |                                   |
      |                                   Pixel **
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:22:55: note: expected ‘const char ***’ but argument is of type ‘Pixel **’
   22 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                         ~~~~~~~~~~~~~~^~~
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:112:52: warning: passing argument 3 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  112 |         data = list_append_strptr(data, &data_len, r);
      |                                                    ^
      |                                                    |
      |                                                    Pixel *
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:22:86: note: expected ‘const char **’ but argument is of type ‘Pixel *’
   22 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                                                         ~~~~~~~~~~~~~^~~
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:112:14: warning: assignment to ‘Pixel **’ from incompatible pointer type ‘const char ***’ [-Wincompatible-pointer-types]
  112 |         data = list_append_strptr(data, &data_len, r);
      |              ^
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:116:44: error: ‘Bitmap’ has no member named ‘px’
  116 |     return (Bitmap){.cols = x, .rows = y, .px = data, .px_len = data_len};
      |                                            ^~
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:116:49: warning: initialization of ‘long unsigned int’ from ‘Pixel **’ makes integer from pointer without a cast [-Wint-conversion]
  116 |     return (Bitmap){.cols = x, .rows = y, .px = data, .px_len = data_len};
      |                                                 ^~~~
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:116:49: note: (near initialization for ‘(anonymous).px_len’)
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c: In function ‘FillRgb’:
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:125:27: error: ‘Bitmap’ has no member named ‘px’
  125 |             Pixel **px = b.px;
      |                           ^
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:127:33: error: ‘Bitmap’ has no member named ‘px_lens’; did you mean ‘px_len’?
  127 |             size_t *px_lens = b.px_lens;
      |                                 ^~~~~~~
      |                                 px_len
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:133:14: error: ‘Bitmap’ has no member named ‘px’
  133 |             b.px = px;
      |              ^
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c: In function ‘SetPxRgb’:
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:144:19: error: ‘Bitmap’ has no member named ‘px’
  144 |     Pixel **px = b.px;
      |                   ^
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:146:25: error: ‘Bitmap’ has no member named ‘px_lens’; did you mean ‘px_len’?
  146 |     size_t *px_lens = b.px_lens;
      |                         ^~~~~~~
      |                         px_len
/tmp/ctranspile3615085061/bitmap-ppm-conversion-through-a-pipe.mochi.c:152:6: error: ‘Bitmap’ has no member named ‘px’
  152 |     b.px = px;
      |      ^

